--- a/main.html
+++ b/main.html
@@ -3,6 +3,13 @@
 <html>
 
 <head>
+	<style>
+		div{text-align:center}
+		img{display:block;margin-left:auto;margin-right:auto;width:50%}
+		h1{text-align:center;font-size:350%}
+		h2{text-align:center}
+		button{background:red;color:white}
+	</style>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -11,6 +18,15 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<div>
+		<img  src="https://thumbs.dreamstime.com/b/environment-earth-day-hands-trees-growing-seedlings-bokeh-green-background-female-hand-holding-tree-nature-field-118143566.jpg">
+		<h1>Pricing Card<h2>
+		<h2>Price: Rs.200</h2>
+		<p>Description: Lorem 
+		ipsum dolor sit amet,
+		consectetur adipiscing elit.</p>
+		<button>Buy Now</button>
+	</div>
 </body>
 
 </html>
